# aio_wx_widgets

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  backup_mypy.ini  mypy.ini  noxfile.py  pylintrc  pyproject.toml  setup.cfg  tasks.py
.github/workflows/: main.yaml
aio_wx_widgets/: __init__.py  binding.py  colors.py  const.py  controller.py  frame.py  sizers.py  type_annotations.py
aio_wx_widgets/containers/: __init__.py  grid.py  group.py
aio_wx_widgets/core/: base_widget.py  binding.py  data_types.py  error_message.py  sizers.py  validators.py
aio_wx_widgets/panels/: __init__.py  panel.py  splitter_panel.py
aio_wx_widgets/widgets/: __init__.py  base_widget.py  button.py  checkbox.py  grid.py  group.py  image.py  labelled_item.py  select.py  text.py  text_entry.py
aio_wx_widgets/widgets/experimental/: __init__.py  bullet_text.py  fixed_grid.py
demo/: __init__.py  __main__.py  start.py
demo/controller/: controller_one.py  controller_three.py  controller_two.py  demo_controller.py  demo_controller_one.py  image_view_controller.py  text_wrapping_controller.py
demo/model/: demo_model.py
demo/view_controllers_factory/: demo_controller.py  demo_view.py  factory.py
demo/views/: demo_views.py  image_view.py  text_view.py  text_wrapping.py  view_one.py  view_three.py  view_two.py
demo/windows/: image_view_window.py  main_window.py  second_window.py  text_wrapping_window.py  third_window.py
tests/: conftest.py  test_binding.py  test_controller.py  test_frame.py  test_panel.py  test_sizers.py
tests/widgets/: test_all_widgets.py
(+4 files in other folders)
