[build-system]
requires = ["flit_core >=2,<3"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "aio_wx_widgets"
description-file = "README.md"
author = "Sander Teunissen"
requires-python=">=3.7"
requires=["wxasync","wxpython","events"]

[tool.flit.metadata.requires-extra]
test=["pytest","pytest-asyncio","pytest-mock","mypy"]
dev = ["pylint","nox","pytest-cov","coverage[toml]>=5.0.3","pre-commit","typing-extensions; python_version=='3.7'"]
